auto parse in controllers